[package]
name = "rusty_parser"
version = "0.8.1"
edition = "2021"
authors = ["ehwan <ehwank98@gmail.com>"]
description = "A Generic compile-time Parser generator and pattern matching library written in Rust"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/ehwan/RustyParser"

keywords = [
  "parser",
  "parser-generator",
  "parser-combinator",
  "context-free-grammar",
  "syntax-tree",
]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
