# This package is currently not in use

[workspace]
members = ["."]

[package]
name = "rusty_parser_derive"
version = "0.1.1"
edition = "2021"
authors = ["ehwan <ehwank98@gmail.com>"]
description = "Proc-Macro utility library only for rusty_parser"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ehwan/RustyParser"

[dependencies]

[lib]